welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:14: error: ';' expected but integer literal found.
  if(!vacation) & day==0) {
                       ^