welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (vacation & day==0) {
    return "off"
  }
    if (vacation & day==6) {
    return "off"
  }
  if (vacation & day>=1 and day<=5) {
    return "10:00"
  }
  if ( !vacation & day>=1 and day<=5) {
    return "7:00"
  }
  if(!vacation) & day==0) {
    return "10:00"
  }
  if((!vacation) & day==1) {
    return "10:00"
  }
}